fix margin under last visible category
It was broken due to targeting :last-child, which doesn't
take hidden categories into account.
Now the last visible category is calculated in JS and
a class is applied to it.

--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,7 @@ button#category-open-panel {
   display: none !important;
 }
 
-main section:last-child {
+main section.last-visible {
   margin-bottom: 108px;
 }
 
